# Logistic_Regression

./: .gitignore  README.md  app.py  find_best_parameters.py  logistic_regression.py  main.py  options.py  playground.ipynb  plot.py  requirements.txt  test.py  xgboost.py  xgboost_scratch.py
datasets/: data_preprocess.py
env_poetry/: pyproject.toml
env_poetry/tests/: test_dataset.py  test_optimizations.py  test_scripts.py  test_xgboost.py
optimization_results/: logreg_GDArmijo.pkl
results/: logreg_Adam.pkl  logreg_AdamW.pkl  logreg_BFGS.pkl  logreg_ConjugateGradient.pkl  logreg_GD.pkl  logreg_GDArmijo.pkl  logreg_LevenbergMarquardt.pkl  logreg_ModifiedNewton.pkl  logreg_ModifiedNewtonArmijo.pkl  logreg_NelderMead.pkl  logreg_SGDW.pkl
scripts/: others.py  plot.py  squared_error_objective.py
src/: find_best_parameters.py  logistic_regression.py  main.py  options.py  plot.py  xgboost_scratch.py
