[tool.poetry]
name = "env_poetry"
version = "0.1.0"
description = ""
authors = ["Zephyrus <zephyrus1175@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.0"
cvxpy = "^1.5.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
torch = "^2.5.0"
xgboost = "^2.1.2"
optuna = "^4.1.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
streamlit = "^1.41.1"
plotly-express = "^0.4.1"
scikit-learn = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
ruff = "^0.7.2"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
